--- a/liquid/_includes/style_layout.html
+++ b/liquid/_includes/style_layout.html
@@ -2,9 +2,7 @@
   <div class="row">
     <div class="col-xs-2 ge-nav">
       <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
-        <li class="active"><a href="#introduction">Introducing the Gengo Style Guide</a></li>
-        <li><a href="#about">About Gengo style</a></li>
-        <li><a href="#platform">Building a scalable platform</a></li>
+        <li class="active"><a href="#introduction">Introduction</a></li>
         <li><a href="#logo-usage">Logo usage</a></li>
         <li><a href="#colors">Colors</a></li>
         <li><a href="#typography">Typography</a></li>
@@ -18,8 +16,6 @@
 
     <div class="col-xs-10 ge-content">
       {% include style/introduction.html %}
-      {% include style/about.html %}
-      {% include style/platform.html %}
       {% include style/logo-usage.html %}
       {% include style/colors.html %}
       {% include style/typography.html %}
