--- a/liquid/_includes/style/introduction.html
+++ b/liquid/_includes/style/introduction.html
@@ -9,13 +9,13 @@
     <li>Platform components and layout</li>
   </ul>
   <p>It’s also a living reference tool for developers, designers, marketers, product managers and others, including our partners and those who want to build on top of our brand or use our assets.</p>
-  <h2 id="about">About Gengo style</h2>
-  <hr/>
+
+  <h2>About Gengo style</h2>
   <p>With our brand, we aim to be simple but not simplistic, clean without being cold and efficient but not soulless in both our visual and written style—or, in the words of Dieter Rams, "Less, but better" (Weniger, aber besser).</p>
   <p>Simplicity isn’t all that we strive for, however. Because we’re a tech company that offers human translation, we want for our brand and product to reflect the human aspect of our service. We do this primarily through color, typography and form.</p>
   <p>Gengo’s colors are inspired by nature, with three shades of green (plant life), blue (water), beige (light), red (fire) and our supporting color, warm gray (soil). Our brand’s font, Open Sans, is a humanist font with gentle lines and high legibility across media, digital and print, and we use soft forms like rounded corners and circles.</p>
-  <h2 id="platform">Building a scalable platform</h2>
-  <hr/>
+
+  <h2>Building a scalable platform</h2>
   <p>When it comes to UI, we’re building scalably with Bootstrap, which has the following advantages:</p>
   <ul>
     <li>Uses a solid 12-column grid system</li>
