update bootstrap-sass to 3.2.0

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -9,8 +9,8 @@ body > .container {
 }
 
 #back-to-top {
-  bottom: 24px;
-  display: none;
+  bottom: -40px; // 24px
+  transition: bottom .2s ease;
 
   a {
     color: $text-color;
