concat all vendor related js files

--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -24,14 +24,8 @@ js:
 - http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js
 - http://vitalets.github.io/x-editable/assets/mockjax/jquery.mockjax.js
 - http://vitalets.github.io/x-editable/assets/demo-mock.js
-- assets/js/vendor/moment.min.js
-- assets/js/vendor/bootstrap-editable.min.js
-- assets/js/vendor/bootstrap-multiselect.js
-- assets/js/vendor/select2.min.js
-- assets/js/vendor/typeaheadjs.js
-- assets/js/vendor/typeahead.js
-- assets/js/vendor/address.js
-- assets/js/main.js
+- assets/js/vendor.js
+- assets/js/docs.js
 ---
 <!DOCTYPE html>
 <html>
