udpate Grunt dist task

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,12 +9,7 @@ navigation:
 
 css:
 - http://fonts.googleapis.com/css?family=Open+Sans:400,600,700
-- assets/css/bootstrap-multiselect.css
-- assets/css/bootstrap-editable.css
-- assets/css/select2.css
-- assets/css/select2-bootstrap.css
-- assets/css/typeahead.js-bootstrap.css
-- assets/css/address.css
+- assets/css/vendor.css
 - assets/css/gengo-bootstrap-theme.css
 - assets/css/gengo.css
 - assets/css/docs.all.css
