Added time zone formatting info from Sarah

--- a/docs/_includes/voice/style-guide.html
+++ b/docs/_includes/voice/style-guide.html
@@ -57,6 +57,11 @@
         <li>e.g. 2:45 p.m., not 2:45 PM</li>
       </ul>
     </li>
+    <li>Please abbreviate time zones in capital letters and be aware of daylight savings time differences. Listing time zones for both parties is a good practice
+      <ul>
+        <li>e.g. 8:15 p.m. PDT/12:15 p.m. JST</li>
+      </ul>
+    </li>
   </ul>
 
   <h2>Punctuation and italics</h2>
