update notification alert structure for TW

--- a/docs/_includes/components/alerts.html
+++ b/docs/_includes/components/alerts.html
@@ -40,38 +40,40 @@
   <p><strong>Warning!</strong> This file could not be saved.</p>
 </div>
 {% endhighlight %}
+
   <h2>Overlayed alerts</h2>
   <div class="bs-example row" style="height:48px;">
-    <div class="alert alert-success alert-overlay">
+    <div class="alert alert-overlay alert-warning">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="icon-close"></i></button>
-      <i class="icon-warning"></i>
+      <i class="icon-alert-status"></i>
       <p><strong>Submit warning:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </div>
   </div>
   <br>
   <div class="bs-example row" style="height:48px;">
-    <div class="alert alert-success alert-overlay">
+    <div class="alert alert-overlay alert-error">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="icon-close"></i></button>
-      <i class="icon-error"></i>
+      <i class="icon-alert-status"></i>
       <p><strong>Submit error:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </div>
   </div>
   <br>
   <div class="bs-example row" style="height:48px;">
-    <div class="alert alert-success alert-overlay">
+    <div class="alert alert-overlay alert-success">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="icon-close"></i></button>
-      <i class="icon-validation"></i>
+      <i class="icon-alert-status"></i>
       <p><strong>Submit complete:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </div>
   </div>
   <br>
 {% highlight html %}
-<div class="alert alert-success alert-overlay">
+<div class="alert alert-overlay alert-success">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
     <i class="icon-close"></i>
   </button>
-  <i class="icon-validation"></i>
+  <i class="icon-alert-status"></i>
   <p><strong>Submit complete:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
 </div>
 {% endhighlight %}
+
 </div>
