Added icon-hold class

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -60,6 +60,9 @@
 .icon-error:before {
   content: "\65";
 }
+.icon-hold:before {
+  content: "\2d";
+}
 .icon-expand:before {
   content: "\2e";
 }
