replace .revising with .warnings

--- a/scss/_status.scss
+++ b/scss/_status.scss
@@ -14,7 +14,7 @@
   @extend .icon-circle;
   color: $gengo-red;
 }
-.revising .icon-status {
+.warnings .icon-status {
   @extend .icon-circle;
   color: $gengo-yellow;
 }
