--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,9 +1,11 @@
 .box {
   padding-right: ($grid-gutter-width / 2);
   padding-left: ($grid-gutter-width / 2);
+  padding-bottom: 21px;
   border: 1px solid #dbdbdb;
   border-radius: 3px;
   background-color: $box-bg;
+  margin-bottom: 26px;
 
   @media (min-width: $screen-sm-min) {
     padding-right: $grid-gutter-width;
