--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -43,7 +43,7 @@ $brand-workbench:       $gengo-gray !default;
 // ## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #f4f4f4 !default;
+$body-bg:               #eee !default;
 $box-bg:                #fff !default;
 //** Global text color on `<body>`.
 $text-color:            #4c4643 !default;
