[update] update colour refrences to gengo-bg in docs

--- a/docs/_includes/components/badges.html
+++ b/docs/_includes/components/badges.html
@@ -69,5 +69,5 @@
   ...
 </ul>
 {% endhighlight %}
-  <div>If the background is <code>#f4f4f4</code>, the active state becomes <code>#ffffff</code></div>
+  <div>If the background is <code>#eeeeee</code>, the active state becomes <code>#ffffff</code></div>
 </div>
