--- a/docs/_includes/components/progress-bar.html
+++ b/docs/_includes/components/progress-bar.html
@@ -30,7 +30,7 @@
 
   <h2>Contextual alternatives</h2>
   <br>
-  <div>If the background is <code>#f4f4f4</code>, the active state becomes <code>#ffffff</code></div>
+  <div>If the background is <code>#eeeeee</code>, the active state becomes <code>#ffffff</code></div>
   <br>
   <div class="bs-example">
     <div class="progress">
