--- a/docs/_includes/style/colors.html
+++ b/docs/_includes/style/colors.html
@@ -36,7 +36,7 @@
     </div>
     <div class="item col-xs-12 col-sm-3">
       <div class="color-box gengo-bg"></div>
-      <strong>GENGO BG</strong> <span class="color">#F4F4F4</span>
+      <strong>GENGO BG</strong> <span class="color">#EEEEEE</span>
     </div>
 
     <div class="item col-xs-12 col-sm-6">
