--- a/docs/_includes/voice/users.html
+++ b/docs/_includes/voice/users.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-sm-12 col-md-6">
-      <h2>Our <span class="customer">Customers</span> are:</h2>
+      <h2>Our <span class="customer">customers</span> are:</h2>
       <h3 class="customer">Diverse</h3>
       <p>They are a mix of individuals, localization project managers, marketing professionals and product staff looking to translate a wide range of content (personal letters, user-generated reviews, product descriptions, etc.). They come from many countries and industries. Some are deeply familiar with translation processes and others are translating for the first time.</p>
 
@@ -17,7 +17,7 @@
       <p>They believe in getting things done and dislike unnecessary distractions. They value tools that work well and information that is useful.</p>
     </div>
     <div class="col-sm-12 col-md-6">
-      <h2>Our <span class="translator">Translators</span> are:</h2>
+      <h2>Our <span class="translator">translators</span> are:</h2>
       <h3 class="translator">Free</h3>
       <p>They pick and choose which jobs they work on and when. Gengo is usually one of many employers and they are free to leave at any time.</p>
 
