--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -74,8 +74,7 @@ js:
   {{ content }}
 
   <!-- JS -->
-{% for src in page.js %}
-  <script src="{{src}}"></script>
-{% endfor %}
+  {% for src in page.js %}<script src="{{src}}"></script>
+  {% endfor %}
 </body>
 </html>
