--- a/docs/_includes/voice/brand-character.html
+++ b/docs/_includes/voice/brand-character.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-sm-12 col-md-6">
       <h3>Translator-facing: Teacher</h3>
-      <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
+      <p>We set high expectations for all of our translators and strive to get the best out of them. We exhibit expertise and believe in lifelong learning (kaizen). Our lessons are fun and focused. We have strong relationships with our translators and show we care about them as people. We can be stern but calm when translators behave poorly.</p>
 
       <h4>Brand traits:</h4>
       <ul class="list-unstyled translator">
