--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -262,7 +262,7 @@ body > .container {
       }
     }
     .logo-circle img {
-      width: 180px;
+      max-width: 180px;
       height: auto;
       padding: 24px;
       overflow: auto;
