--- a/scss/_alerts.scss
+++ b/scss/_alerts.scss
@@ -59,7 +59,7 @@
   z-index: 9999;
   padding: $alert-overlay-padding;
   width: 100%;
-  height: $navbar-height;
+  min-height: $navbar-height;
   border: 0;
   border-radius: 0;
   line-height: $alert-overlay-line-height;
