add download2 icon

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -63,6 +63,9 @@
 .icon-download:before {
   content: "\44";
 }
+.icon-download2:before {
+  content: "\4c";
+}
 .icon-edit:before {
   content: "\21";
 }
