--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,7 @@
 
 @mixin get-image($path, $ext: "png", $w: auto, $h: auto) {
   $at1x-path: "#{$path}.#{$ext}";
-  $at2x-path: "#{$path}_@2x.#{$ext}";
+  $at2x-path: "#{$path}@2x.#{$ext}";
 
   @include img-retina("#{$at1x-path}", "#{$at2x-path}", $w, $h);
   width: $w;
